libs/error-stack/tests/snapshots/test_debug__full__color_mode_emphasis.snap
---
source: libs/error-stack/tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
[1mroot error[22m
├╴at [3mlibs/error-stack/tests/common.rs:9:5[23m
├╴backtrace (1)
╰╴span trace with 2 frames (1)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]
