libs/error-stack/tests/snapshots/test_debug__full__hook_context.snap
---
source: libs/error-stack/tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
root error
├╴at libs/error-stack/tests/common.rs:9:5
├╴backtrace (1)
├╴span trace with 2 frames (1)
╰╴unsigned 32bit integer (No. 0)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]
